# cmake

./: CMakeLists.txt  README.md
include/: add_num.h  hello_world.h
src/: add_num.cpp  hello_world.cpp  main.cpp
